# tailwind-haskell

./: .gitignore  CHANGELOG.md  Jenkinsfile  README.md  flake.nix  hie.yaml  tailwind.cabal
.github/workflows/: ci.yaml
exe/: Main.hs
src/Web/: Tailwind.hs
tailwind-nix/: README.md  flake.nix  node-packages.nix  package.json
tests/: Main.hs
