cabal-version:      2.4
name:               tailwind
version:            0.4.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           Tailwind wrapped in Haskell

-- A longer description of the package.
description:        Run Tailwind from Haskell without touching JavaScript

-- A URL where users can report bugs.
bug-reports:        https://github.com/srid/tailwind-haskell
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

common c
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  build-depends:
    , base          >=4.13.0.0 && <=4.99.0.0
    , data-default
    , filepath
    , filepattern
    , monad-logger
    , optics-th
    , relude

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  default-language:   Haskell2010

library
  import:          c
  hs-source-dirs:  src
  exposed-modules: Web.Tailwind
  build-depends:
      async
    , bytestring
    , containers
    , directory
    , mtl
    , neat-interpolation
    , profunctors
    , safe-exceptions
    , temporary
    , text
    , time
    , unliftio
    , which
    , with-utf8

executable tailwind-run
  import:         c
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:
      megaparsec
    , optics-core
    , optparse-applicative
    , parser-combinators
    , tailwind
    , with-utf8

test-suite tests
  import:         c
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends:
      hspec
    , neat-interpolation
    , optics-core
    , tailwind
